[project]
name = "rgb2cmyk"
description = "RGB to CMYK (save as tif)"
version = "1.0.0"
license = {file = "LICENSE"}

[project.urls]
Repository = "https://github.com/Jacky-MYQ/comfyui-rgb2cmyk"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "comfyui-rgb2cmyk"
Icon = ""
