[project]
name = "rgb2cmyk"
description = "RGB to CMYK (save as tif)"
version = "0.1.0"
license = {file = "LICENSE"}

[project.urls]
Repository = "https://github.com/Jacky-MYQ/comfyui-rgb2cmyk"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "Jacky-MYQ"
DisplayName = "comfyui-rgb2cmyk"
Icon = ""
